--- a/killsaucegames.cms.web/web.config
+++ b/killsaucegames.cms.web/web.config
@@ -5,7 +5,7 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile="..\logs\stdout\KillSauce" hostingModel="outofprocess">
+      <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile="..\logs\stdout\KillSauce\error.log" hostingModel="outofprocess">
         <environmentVariables>
           <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="44394" />
           <environmentVariable name="COMPLUS_ForceENC" value="1" />
